Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/expression/BinopVoidTest.out
BinopVoidTest.java:11:21: compiler.err.void.not.allowed.here
BinopVoidTest.java:12:16: compiler.err.void.not.allowed.here
BinopVoidTest.java:13:16: compiler.err.void.not.allowed.here
BinopVoidTest.java:13:24: compiler.err.void.not.allowed.here
4 errors
