Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/expression/BinopVoidTest.java
/*
 * @test  /nodynamiccopyright/
 * @bug 8074148
 * @summary Attr.visitBinary flags error at wrong position
 *
 * @compile/fail/ref=BinopVoidTest.out -XDrawDiagnostics  BinopVoidTest.java
 */

class BinopVoidTest {
    void foo() {}
    int x = 10 + foo();
    int y = foo() + 10;
    int z = foo() + foo();
}
